Update professional and project experience sections

--- a/index.html
+++ b/index.html
@@ -211,23 +211,30 @@
     </div>
 
     <!-- EXPERIENCE -->
-    <h2>Professional Experience</h2>
+    Project Experience</h2>
 
     <div class="experience">
-        <h3>Senior Technical Architect & Team Lead</h3>
-        <p class="company">Sevendyne Consultancy Services LLP</p>
-        <p class="duration">Sep 2024 – Nov 2025 | Kochi</p>
+        <h3>Backend App Developer</h3>
+        <p class="company">Quantyf</p>
+        <p class="duration">June 2025 – Nov 2025 | Kochi</p>
         <ul>
-            <li>Architected HRMS platform reducing manual HR work by 60%</li>
-            <li>Designed AWS-hosted Django architecture with 99.9% uptime</li>
-            <li>Optimized PostgreSQL queries reducing latency by 35%</li>
+            <li>Involved in python app development and ficco optimisation libraries</li>
+        </ul>
+    </div>
+
+    <div class="experience">
+        <h3>C++ Developer</h3>
+        <p class="company">Tacodi USA</p>
+        <p class="duration">Dec 2024 – Mar 2025 | Remote</p>
+        <ul>
+            <li>C++ web app development for connecting tcp ip communication systems</li>
         </ul>
     </div>
 
     <div class="experience">
         <h3>Senior Technical Consultant & Solution Architect</h3>
         <p class="company">CSR Informatik GmbH, Germany</p>
-        <p class="duration">May 2022 – Aug 2024 | Remote</p>
+        <p class="duration">May 2022 – Nov 2024 | Remote</p>
         <ul>
             <li>Built AI-powered recruitment automation using OpenAI</li>
             <li>Architected scalable e-commerce and analytics platforms</li>
